[gd_scene load_steps=4 format=3 uid="uid://construction_overlay_01"]

[ext_resource type="Script" path="res://scripts/ui/construction_overlay.gd" id="1_script"]
[ext_resource type="PackedScene" uid="uid://construction_hover_panel_01" path="res://scenes/ui/construction_hover_panel.tscn" id="2_hover"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dim"]
bg_color = Color(0, 0, 0, 0.3)
draw_center = true

[node name="ConstructionOverlay" type="CanvasLayer"]
layer = 11
script = ExtResource("1_script")

[node name="DimOverlay" type="PanelContainer" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dim")

[node name="BlockedUIOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlockTopBar" type="Control" parent="BlockedUIOverlay"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 48.0
offset_left = 0.0
offset_right = 0.0
offset_top = 0.0
grow_horizontal = 2
mouse_filter = 1

[node name="BlockCalamityBar" type="Control" parent="BlockedUIOverlay"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -160.0
offset_right = 80.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1

[node name="ConstructionCategoryTags" type="HBoxContainer" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -170.0
offset_right = 180.0
offset_bottom = -130.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 12
alignment = 1

[node name="ConstructionZoneButtons" type="HBoxContainer" parent="."]
visible = false
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -280.0
offset_right = 240.0
offset_bottom = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 1

[node name="ConstructionHoverPanel" parent="." instance=ExtResource("2_hover")]

[node name="ProgressRingsContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2

[node name="ConfirmContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 80.0

[node name="ConfirmButton" type="Button" parent="ConfirmContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 28
text = "âœ“"
